--- a/index.html
+++ b/index.html
@@ -3,105 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>ELi++</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="eli.css">
     <style media="screen">
-        body { display:grid; grid-auto-flow: row; grid-gap:.5em; align-items: start; }
-        section { margin:.5em; grid-gap:.5em; }
+
     </style>
   </head>
-  <body>
+  <body class="g g1 align-fc">
 
-  <section class="g g2 s1">
-
-    <div class="talign-c red darken-2 white-text ">
-      <h1>ELi++</h1>
-    </div>
-    <div class="talign-c yellow black-text ">
-      <h1>ROCKS</h1>
-    </div>
-
-  </section>
-
-  <section class="g g1">
-    <div class="g g1 border-dashed-2 talign-c">
-      <h2>UI KIT</h2>
-    </div>
-  </section>
-
-
-
-  <!--HEADER-->
-  <header class="ha1 grey lighten-3">
-
-    <div class="brand"> <img src="elilogo.png" class="circle" > </div>
-      <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SERVICES</a>
-        <a href="#">CONTACT</a>
-      </nav>
-  </header>
-
-  <header class="h1a1 red white-text">
-    <nav>
-      <a href="#" class="mdi mdi-facebook"></a>
-      <a href="#" class="mdi mdi-twitter"></a>
-      <a href="#" class="mdi mdi-instagram"></a>
-    </nav>
-    <div class="brand"> <img src="elilogo.png" class="circle" > </div>
-      <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SERVICES</a>
-        <a href="#">CONTACT</a>
-      </nav>
-  </header>
-
-  <header class="g gaaa align-c blue white-text">
-
-    <div class="brand"> <img src="elilogo.png" class="circle" > </div>
-      <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SERVICES</a>
-        <a href="#">CONTACT</a>
-      </nav>
-      <nav>
-        <a href="#" class="mdi mdi-facebook"></a>
-        <a href="#" class="mdi mdi-twitter"></a>
-        <a href="#" class="mdi mdi-instagram"></a>
-      </nav>
-  </header>
-
-
-  <header class="h1r1a ">
-
-    <div class="brand"> <img src="elilogo.png" class="circle" > </div>
-      <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SERVICES</a>
-        <a href="#">CONTACT</a>
-      </nav>
-      <nav>
-        <a href="#" class="mdi mdi-facebook indigo-text text-darken-1"></a>
-        <a href="#" class="mdi mdi-twitter light-blue-text text-lighten-1"></a>
-        <a href="#" class="mdi mdi-instagram purple-text "></a>
-      </nav>
-  </header>
-
-  <header class="h1r1 purple darken-4 white-text">
-
-    <div class="brand"> <img src="elilogo.png" class="circle" > </div>
-      <nav class="">
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SERVICES</a>
-        <a href="#">CONTACT</a>
-      </nav>
-  </header>
-
-
+  <form class="g g1" action="p/greet" method="post" id="form" onsubmit="return false;" >
+      <input type="text" name="name" value="" label="Name" licon="mdi mdi-account" required>
+      <input type="email" name="email" value="" label="Email" licon="mdi mdi-email" required>
+      <input type="tel" name="phone" value="" label="Phone" required >
+      <input type="password" name="password" value="" label="Password" required >
+      <span class="btn red" onclick="validSubmit('#form');">Submit</span>
+  </form>
 
 
 
