--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <input type="tel" name="phone" value="" label="Phone" required >
       <input type="password" name="password" value="" label="Password" required >
       <span class="btn red" onclick="validSubmit('#form');">Submit</span>
+
+      <div class="g g2">
+          <span></span>
+          <a href="LOGIN">Already Registered ?</a>
+      </div>
   </form>
 
 
